# Koalas

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml  cmake_windows.yml  linux.yml  macos.yml  ubuntu.yml  windows.yml
docs/: CMakeLists.txt  Doxyfile.in  classes.rst  conf.py  index.rst  namespace_ursidae.rst
include/: ursidae.hpp
src/: main.cpp  ursidae.cpp
